<resources>
    <string name="app_name">TrueCallerClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_rationale">App needs permission to read contacts</string>
    <string name="calls">Calls</string>
    <string name="do_you_want_to_save_this_number">Do you want to save this number?</string>
    <string name="sms">SMS</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="authentication_layout_error_message">You need to log in in order to make the app work properly</string>
    <string name="try_again">Try again</string>
    <string name="preference_file_key">com.innovations.djnig.truecallerclone.PREFERENCE_FILE_KEY</string>
    <string name="country_iso">countryIso</string>
    <string name="start_number">Start number</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings NotificationsListenerions -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sounds">Sounds</string>
    <string name="app_language">App Language</string>
    <string name="caller_id">Caller ID</string>
    <string name="messaging">Messaging</string>
    <string name="block">Block</string>
    <string name="appearance">Appearance</string>
    <string name="protect_yourself">Protect yourself from calls and messages from the most reported numbers</string>
    <string name="block_spammers">Block top spammers</string>
    <string name="block_hidden">Block hidden numbers</string>
    <string name="how_block">How to block calls</string>
    <string name="notif_block_calls">Receive a notification when a call is blocked</string>
    <string name="notif_calls_tittle">Notification for blocked calls</string>
    <string name="notif_sms_tittle">Notification for blocked SMS</string>
    <string name="notif_block_sms">Receive a notification when a message is blocked</string>
    <string name="call_was_blocked">Call from hidden number was blocked</string>
    <string name="spam_call_was_blocked">Spam call was blocked</string>
    <string name="pref_notif_ringtone">notification ringtone</string>
    <string name="action_block">block</string>
    <string name="action_delete">delete</string>
    <string name="enter_number">Enter number</string>
    <string name="find_contact">Find contact</string>
    <string name="save_to_contacts">Save to contacts</string>
    <string name="action_more">More options</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="call">Make a call</string>
    <string name="select_phone_number">Select phone number</string>
    <string name="unlock_all">Unlock all contacts</string>
    <string name="delete_all_messages">Delete all messages</string>
    <string name="unlock">Unlock</string>

    <string-array name="pref_how_to_block_calls">
        <item>Reject Automatically</item>
        <item>Ring Silent</item>
    </string-array>

    <string-array name="pref_how_to_block_calls_values">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
