<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovations.djnig.truecallerclone.DrawerActivity">

    <include layout="@layout/content_drawer"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="visible"
        android:background="@color/colorPrimary">
    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBarMain"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="48dp"
        android:layout_gravity="top"
        android:indeterminateOnly="true"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" />


    <com.mancj.materialsearchbar.MaterialSearchBar
        android:layout_margin="5dp"
        android:id="@+id/searchBar"
        app:mt_navIconEnabled="true"
        android:visibility="visible"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.mancj.materialsearchbar.MaterialSearchBar>

    <ImageButton
        android:id="@+id/show_blocked_contacts_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_shield"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="17dp"
        android:focusable="true"
        android:clickable="true"
        android:contentDescription="Block" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_alternative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_alternative"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <LinearLayout
                android:id="@+id/app_bar_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/my_custom_icon"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_pictures"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="19sp"
                        android:textColor="@color/white"
                        android:text="+380676223322"/>
                    <TextView
                        android:id="@+id/text_blocked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:visibility="visible"
                        android:textSize="15sp"
                        android:textColor="@color/red"
                        android:text="Blocked"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/menu_more"
        android:visibility="invisible"
        app:elevation="9dp"
        android:layout_gravity="end"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialSheetFab.Sheet">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:visibility="gone"
                android:id="@+id/fab_sheet_new_contact"
                android:drawableStart="@drawable/ic_action_save"
                android:text="@string/save_to_contacts"
                style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/fab_sheet_block"
                android:drawableStart="@drawable/ic_block"
                android:text="@string/block"
                style="@style/TextAppearance.MaterialSheetFab.Sheet.Item" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/fab_sheet_delete_conversation"
                android:drawableStart="@drawable/ic_action_delete"
                android:text="@string/delete_conversation"
                style="@style/TextAppearance.MaterialSheetFab.Sheet.Item" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/blocked_contacts_menu_more"
        android:visibility="invisible"
        app:elevation="9dp"
        android:layout_gravity="end"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialSheetFab.Sheet">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:visibility="visible"
                android:id="@+id/unlock_all"
                android:drawableStart="@drawable/ic_action_block"
                android:text="@string/unlock_all"
                style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/clear_all_messages"
                android:drawableStart="@drawable/ic_action_delete"
                android:text="@string/delete_all_messages"
                android:lines="1"
                style="@style/TextAppearance.MaterialSheetFab.Sheet.Item" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
